Adding ability to pre-set hostname to nlb address for new installs

--- a/cloudprem/modules/replicated/charts/replicated/templates/load-license-script.yaml
+++ b/cloudprem/modules/replicated/charts/replicated/templates/load-license-script.yaml
@@ -14,3 +14,4 @@ data:
       fi
     done
     cat /tmp/license.rli | replicatedctl license-load
+    replicatedctl app-config set hostname --value "$DOZUKI_HOSTNAME"
