Adding feature to allow specifying unattended configuration for replicated as well as specifying initial app sequence number for install.

--- a/cloudprem/modules/replicated/charts/replicated/templates/replicated.yaml
+++ b/cloudprem/modules/replicated/charts/replicated/templates/replicated.yaml
@@ -126,8 +126,6 @@ spec:
               value: ""
             - name: MAINTAIN_ROOK_STORAGE_NODES
               value: "0"
-            - name: DOZUKI_HOSTNAME
-              value: '{{ .Values.nlb_hostname }}'
           ports:
             - containerPort: 9874
             - containerPort: 9876
@@ -144,9 +142,6 @@ spec:
               mountPath: /var/run/replicated
             - name: docker-socket
               mountPath: /host/var/run/docker.sock
-#            - name: replicated-conf
-#              mountPath: /host/etc/replicated.conf
-#              subPath: replicated.conf
             - name: proc
               mountPath: /host/proc
               readOnly: true
@@ -156,6 +151,9 @@ spec:
             - name: load-license
               mountPath: /tmp/load.sh
               subPath: load.sh
+            - name: replicated-conf
+              mountPath: /host/etc/replicated.conf
+              subPath: replicated.conf
           resources:
             requests:
               cpu: 250m
@@ -204,9 +202,6 @@ spec:
         - name: docker-socket
           hostPath:
             path: /var/run/docker.sock
-#        - name: replicated-conf
-#          hostPath:
-#            path: /etc/replicated.conf
         - name: proc
           hostPath:
             path: /proc
@@ -217,6 +212,9 @@ spec:
           configMap:
             name: load-license
             defaultMode: 0777
+        - name: replicated-conf
+          configMap:
+            name: replicated-unattended-conf
 ---
 apiVersion: v1
 kind: Service
