--- a/cloudprem/modules/webhooks/charts/connectivity/charts/connectors-worker/templates/secret.yaml
+++ b/cloudprem/modules/webhooks/charts/connectivity/charts/connectors-worker/templates/secret.yaml
@@ -23,7 +23,7 @@ data:
   FRONTEGG_CONNECTORS_WORKER_SERVICE_REDIS_PASSWORD: {{ .password | b64enc | quote }}
   {{- end }}
   {{- with .Values.frontegg }}
-  FRONTEGG_CHANNELS_TO_RUN: {{ required "A valid .Values.frontegg.channels entry required!" .channels | b64enc | quote }}
+  FRONTEGG_CHANNELS_TO_RUN: {{ .channels | b64enc | quote }}
   {{- with .twilio }}
   FRONTEGG_TWILIO_SENDER: {{ .sender | b64enc | quote }}
   FRONTEGG_TWILIO_TOKEN: {{ .token | b64enc | quote }}
