--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,7 @@ repos:
         args: ["markdown", "table", "--output-file", "README.md", "./cloudprem/storage"]
       - id: terraform-docs-go
         args: ["markdown", "table", "--output-file", "README.md", "./cloudprem/app"]
+  - repo: git://github.com/antonbabenko/pre-commit-terraform
+    rev: "v1.51.0"
+    hooks:
+      - id: terraform_fmt
