--- a/cloudprem/app/charts/replicated/values.yaml
+++ b/cloudprem/app/charts/replicated/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 
 # Name of a Kubernetes secret containing the replicated license file "license.rli"
-license_secret: replicated-license
+license:
 
 # The hostname of the deployed NLB
 nlb_hostname:
