--- a/cloudprem/app/static/replicated_config.json
+++ b/cloudprem/app/static/replicated_config.json
@@ -1,7 +1,7 @@
 {
   "DaemonAuthenticationType": "password",
   "ReleaseSequence": ${release_sequence},
-  "LicenseFileLocation": "/host/etc/license.rli"
+  "LicenseFileLocation": "/tmp/license.rli",
   "DaemonAuthenticationPassword": "${dashboard_password}",
   "TlsBootstrapType": "self-signed",
   "TlsBootstrapHostname": "${nlb_hostname}"
