--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,6 @@ repos:
     rev: "v1.62.2"
     hooks:
       - id: terraform_fmt
+      - id: terraform_tflint
+        args:
+          - --args=--enable-rule=terraform_documented_variables
