Specify terraform version for workflow as tfsec is currently broken for versions > 1.0.11
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,6 +27,8 @@ jobs:
     # Install the latest version of Terraform CLI
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.0.11
 
     - name: Terraform ${{ matrix.module }} Module Init
       run: terraform init
