--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,11 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            Major Module Refactor & Scaling
-            - Split Terraform code into 4 separate modules: Network, Compute, Storage, and App
-            - Using Terragrunt to manage configuration, dependencies, and state
-            - Added support for Cluster & Pod autoscaling in Kubernetes
-            - Fixed replicated app sequence targeting to unpin release after initial install
+            Dual Module Refactor
+            - Refactored root module splitting into 2 modules instead of 4, one for physical resources, one for logical resources.
+            - No longer using S3 module for buckets, we use raw resources now for increased compatibility and reduced complexity.
+            - Massive BI improvements. Streamlined DMS creation and management, improved database ingest & in-transit SSL.
+            - Encrypting K8 Secrets using KMS.
+            - Upgraded most off-the-shelf terraform module versions.
           draft: false
           prerelease: false
