Making changes to the tfsec ignore directives to retain compatibility with latest version of tfsec. Also excluding downloaded module scan since tfsec does a poor job with dynamic blocks.
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,6 +59,7 @@ jobs:
         reporter: github-pr-review
         filter_mode: nofilter
         fail_on_error: true
+        tfsec_flags: --exclude-downloaded-modules
 
 
 
