Lock tfsec version to prevent constant moving target with tfsec runs.
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,7 +59,7 @@ jobs:
         reporter: github-pr-review
         filter_mode: nofilter
         fail_on_error: true
-        tfsec_version: 1.15.4
+        tfsec_version: v1.15.4
         tfsec_flags: --exclude-downloaded-modules
 
 
