Fix double curl typo.
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/cloudprem/physical/static/bastion_userdata.yml
+++ b/cloudprem/physical/static/bastion_userdata.yml
@@ -28,7 +28,7 @@ write_files:
     #!/bin/bash -xe
     set -o xtrace
 
-    curl -L curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl \
+    curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl \
     > /usr/local/bin/kubectl
     chmod 755 /usr/local/bin/kubectl
 
