--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,8 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            Localized Helm Charts
-            - Helm charts are no longer pulled from a remote repository to preserve versioning and prevent errors on network timeouts.
+            RDS Configuration Fixes
+            - Updating RDS CA Pem file for GovCloud.
+            - Fixing RDS parameter group selection to correctly assign custom MySQL parameters.
           draft: false
           prerelease: false
