update tfsec config to correct version and disable external module checking
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -56,7 +56,8 @@ jobs:
         level: info
         reporter: github-pr-review
         filter_mode: nofilter
-        fail_on_error: true
+        tfsec_version: v1.21.2
+        tfsec_flags: --exclude-downloaded-modules
 
 
 
