--- a/cloudprem/logical/static/grafana_values.yml
+++ b/cloudprem/logical/static/grafana_values.yml
@@ -52,6 +52,11 @@ datasources:
       secureJsonData:
         password: ${database_password}
 
+## Pass the plugins you want installed as a list.
+##
+plugins:
+  - grafana-piechart-panel
+
 ## Configure grafana dashboard to import
 ## NOTE: To use dashboards you must also enable/configure dashboardProviders
 ## ref: https://grafana.com/dashboards
