--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,6 +10,9 @@ jobs:
   test:
     name: 'Run tests'
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        testcase: [ec1_full, ew1_full, ew2_full, ew3_full, ue1_bi_default, ue1_bi_ha, ue1_bi_ha_vpn, ue1_bi_public, ue1_bi_vpn, ue1_min_default, ue1_min_ha, ue1_webhooks, ue2_full, uw2_full, ugw1_bi_default, ugw1_bi_ha, ugw1_bi_ha_vpn, ugw1_bi_public, ugw1_bi_vpn, ugw1_min_default, ugw1_min_ha, ugw1_webhooks]
     defaults:
       run:
         shell: bash
@@ -21,7 +24,7 @@ jobs:
         uses: unfor19/install-aws-cli-action@v1.0.3
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.18.5'
+          go-version: '~1.18.5'
       - name: Add profile credentials to ~/.aws/credentials
         run: |
             aws configure set aws_access_key_id ${{ secrets.TEST_STANDARD_AWS_ACCESS_KEY_ID }} --profile default
@@ -42,20 +45,20 @@ jobs:
       - name: Download src Go Modules
         working-directory: live/tests/src
         run: go mod download
-      - name: Install log parser
-        run: go install github.com/gruntwork-io/terratest/cmd/terratest_log_parser@latest
+#      - name: Install log parser
+#        run: go install github.com/gruntwork-io/terratest/cmd/terratest_log_parser@latest
       - name: Run Tests
         working-directory: live/tests/src
         run: go test -v -count 1 -timeout 3000m  |tee testoutput.log
-      - name: Parse Test Output
-        working-directory: live/tests/src
-        run: terratest_log_parser -testlog testoutput.log -outputdir test_output
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-output
-          path: live/tests/src/test_output
-          retention-days: 5
+#      - name: Parse Test Output
+#        working-directory: live/tests/src
+#        run: terratest_log_parser -testlog testoutput.log -outputdir test_output
+#      - name: 'Upload Artifact'
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: test-output
+#          path: live/tests/src/test_output
+#          retention-days: 5
 #  static:
 #    name: 'Static Analysis'
 #    runs-on: ubuntu-latest
