--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,13 +6,27 @@ on:
     - main
     - terratest-github
 
+concurrency: test-suite
+
 jobs:
+  get_test_list:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get list of test conditions
+        id: set-matrix
+        working-directory: live/tests/src
+        run: echo "::set-output name=matrix::$(ls -d * |grep -v go. | jq --raw-input --slurp --compact-output 'split("\n")[:-1]')"
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
   test:
+    needs: get_test_list
     name: 'Run tests'
     runs-on: ubuntu-latest
+    continue-on-error: true
     strategy:
       matrix:
-        testcase: [ec1_full, ew1_full, ew2_full, ew3_full, ue1_bi_default, ue1_bi_ha, ue1_bi_ha_vpn, ue1_bi_public, ue1_bi_vpn, ue1_min_default, ue1_min_ha, ue1_webhooks_default, ue2_full, uw2_full, ugw1_bi_default, ugw1_bi_ha, ugw1_bi_ha_vpn, ugw1_bi_public, ugw1_bi_vpn, ugw1_min_default, ugw1_min_ha, ugw1_webhooks]
+        testcase: ${{ fromJson(needs.get_test_list.outputs.matrix) }}
     defaults:
       run:
         shell: bash
@@ -50,8 +64,7 @@ jobs:
 #        run: go install github.com/gruntwork-io/terratest/cmd/terratest_log_parser@latest
       - name: Run Tests
         working-directory: live/tests/src
-        continue-on-error: true
-        run: go test -v -count 1 -timeout 3000m ${{ matrix.testcase }}_test.go
+        run: go test -v -count 1 -timeout 300m ${{ matrix.testcase }}
 #      - name: Parse Test Output
 #        working-directory: live/tests/src
 #        run: terratest_log_parser -testlog testoutput.log -outputdir test_output
