testing cleanup after test run
Signed-off-by: David Della Vecchia <ddv@dozuki.com>

--- a/live/tests/cloud-nuke.yaml
+++ b/live/tests/cloud-nuke.yaml
@@ -1,7 +1,7 @@
-s3:
-  exclude:
-    names_regex:
-      - ^dozuki-terraform
+#s3:
+#  exclude:
+#    names_regex:
+#      - ^dozuki-terraform
 
 IAMUsers:
   exclude:
