--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -65,15 +65,35 @@ jobs:
       - name: Run Tests
         working-directory: live/tests/src
         run: go test -v -count 1 -timeout 300m ${{ matrix.testcase }}
-#      - name: Parse Test Output
-#        working-directory: live/tests/src
-#        run: terratest_log_parser -testlog testoutput.log -outputdir test_output
-#      - name: 'Upload Artifact'
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: test-output
-#          path: live/tests/src/test_output
-#          retention-days: 5
+  clean:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: install-aws-cli-action
+        uses: unfor19/install-aws-cli-action@v1.0.3
+      - name: Add profile credentials to ~/.aws/credentials
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.TEST_STANDARD_AWS_ACCESS_KEY_ID }} --profile default
+          aws configure set aws_secret_access_key ${{ secrets.TEST_STANDARD_AWS_SECRET_ACCESS_KEY }} --profile default
+          aws configure set aws_access_key_id ${{ secrets.TEST_GOV_AWS_ACCESS_KEY_ID }} --profile gov
+          aws configure set aws_secret_access_key ${{ secrets.TEST_GOV_AWS_SECRET_ACCESS_KEY }} --profile gov
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_wrapper: false
+          terraform_version: 1.1.8
+      - name: Setup Terragrunt
+        uses: autero1/action-terragrunt@v1.1.0
+        with:
+          terragrunt_version: 0.37.1
+      - name: Setup AWSweeper
+        run: curl -sSfL https://raw.githubusercontent.com/jckuester/awsweeper/master/install.sh | sh -s v0.12.0
+      - name: Setup Cloud-Nuke
+        run: curl -sSfL https://github.com/gruntwork-io/cloud-nuke/releases/download/v0.16.2/cloud-nuke_linux_amd64 && mv cloud-nuke_linux_amd64 /usr/bin/cloud-nuke
+      - name: Remove resources created during tests
+        working-directory: live/
+        run: ./clean.sh
 #  static:
 #    name: 'Static Analysis'
 #    runs-on: ubuntu-latest
